z-index changed to prevent clicking on other compoennts

--- a/client/src/components/UI/Modal/Modal.css
+++ b/client/src/components/UI/Modal/Modal.css
@@ -8,7 +8,7 @@
     height: 100vh;
     background-color: #E6F4FA;
     filter:opacity(0.7);
-    z-index: 10;
+    z-index: 20;
 }
 
 .modal{
